--- a/Client/Pages/ProductDetails.razor
+++ b/Client/Pages/ProductDetails.razor
@@ -30,6 +30,9 @@ else
                 <InputDetail Name="description"
                              Placeholder="box"
                              @bind-Value="product.Description" />
+                <InputDetail Name="description"
+                             Placeholder="box"
+                             @bind-Value="product.Brand" />
                 <div class="field">
                     <label class="label" for="quantity">
                         quantity
