updates more razor pages

--- a/Client/Pages/ProductDetails.razor
+++ b/Client/Pages/ProductDetails.razor
@@ -30,7 +30,7 @@ else
                 <InputDetail Name="description"
                              Placeholder="box"
                              @bind-Value="product.Description" />
-                <InputDetail Name="description"
+                <InputDetail Name="brand"
                              Placeholder="box"
                              @bind-Value="product.Brand" />
                 <div class="field">
