--- a/Client/Shared/CardContent.razor
+++ b/Client/Shared/CardContent.razor
@@ -2,10 +2,12 @@
     <div class="content">
         <div class="name">@Name</div>
         <div class="description">@Description</div>
+        <div class="brand">@Brand</div>
     </div>
 </div>
 
 @code {
     [Parameter] public string Name { get; set; }
     [Parameter] public string Description { get; set; }
+    [Parameter] public string Brand { get; set; }
 }
