update product list

--- a/Client/Shared/Products/ProductList.razor
+++ b/Client/Shared/Products/ProductList.razor
@@ -10,7 +10,8 @@ else if (Products != null && Products.Count() > 0)
             <li role="presentation">
                 <div class="card">
                     <CardContent Name="@product.Name"
-                                 Description="@product.Description" />
+                                 Description="@product.Description"
+                                 Brand="@product.Brand" />
 
                     <footer class="card-footer">
 
