Getting build to pass

--- a/Client/Pages/Drafts.razor
+++ b/Client/Pages/Drafts.razor
@@ -10,9 +10,7 @@
     <div class="columns is-multiline is-variable">
         <div class="column is-8">
             <DraftList ErrorMessage="@errorMessage"
-                         Drafts="@drafts"
-                         SelectDraft="@SelectDraft"
-                         DeleteDraft="@DeleteDraft" />
+                         Drafts="@drafts" />
         </div>
     </div>
 
