--- a/Client/Shared/CardDraftContent.razor
+++ b/Client/Shared/CardDraftContent.razor
@@ -8,6 +8,6 @@
 
 @code {
     [Parameter] public string Name { get; set; }
-    [Parameter] public int PlayersDrafted { get; set; }
+    [Parameter] public string PlayersDrafted { get; set; }
     [Parameter] public string Sport { get; set; }
 }
