add draft to menu

--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -8,6 +8,9 @@
             <NavLink href="/products" ActiveClass="active-link">
                 Products
             </NavLink>
+            <NavLink href="/drafts" ActiveClass="active-link">
+                Drafts
+            </NavLink>
             <NavLink href="/about" ActiveClass="active-link">
                 About
             </NavLink>
