--- a/Client/Pages/Drafts.razor
+++ b/Client/Pages/Drafts.razor
@@ -10,7 +10,9 @@
     <div class="columns is-multiline is-variable">
         <div class="column is-8">
             <DraftList ErrorMessage="@errorMessage"
-                         Drafts="@drafts" />
+                         Drafts="@drafts" 
+                         SelectDraft="@SelectDraft"
+                         DeleteDraft="@DeleteDraft"/>
         </div>
     </div>
 
