fix edit labels and placeholders

--- a/Client/Pages/DraftDetails.razor
+++ b/Client/Pages/DraftDetails.razor
@@ -24,14 +24,14 @@ else
                            value="@draft.Id"
                            readonly="readonly" />
                 }
-                <InputDetail Name="name"
-                             Placeholder="Oranges"
+                <InputDetail Name="Name"
+                             Placeholder="Super Cool Name"
                              @bind-Value="draft.Name" />
-                <InputDetail Name="description"
-                             Placeholder="box"
+                <InputDetail Name="Players Drafted"
+                             Placeholder="number of players"
                              @bind-Value="draft.PlayersDrafted" />
-                <InputDetail Name="brand"
-                             Placeholder="box"
+                <InputDetail Name="Sport"
+                             Placeholder="Cool Sport"
                              @bind-Value="draft.Sport" />
             </div>
         </div>
