--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,9 +1,19 @@
-﻿@page "/"
-@inject NavigationManager NavigationManager
+﻿@page "/counter"
+
+<h1>Counter</h1>
+
+<p>Current count: @currentCount</p>
+
+<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
-    protected override void OnInitialized()
+    private int currentCount = 0;
+
+    [Parameter]
+    public int IncrementAmount { get; set; } = 1;
+
+    private void IncrementCount()
     {
-        NavigationManager.NavigateTo("/products");
+        currentCount += IncrementAmount;
     }
 }
