adds counter to draftdetails

--- a/Client/Pages/DraftDetails.razor
+++ b/Client/Pages/DraftDetails.razor
@@ -33,6 +33,7 @@ else
                 <InputDetail Name="Sport"
                              Placeholder="Cool Sport"
                              @bind-Value="draft.Sport" />
+                <Counter IncrementAmount="10" />
             </div>
         </div>
         <footer class="card-footer ">
