--- a/Client/Pages/About.razor
+++ b/Client/Pages/About.razor
@@ -7,6 +7,10 @@
             with Blazor. The shopping theme is used throughout the app.
         </p>
         <br />
+        <RadzenButton Text="@text"></RadzenButton>
+@code {
+  string text = "Hi";
+}
         <h2 class="title">Resources</h2>
         <ul>
             <li>
