Additional Radzen adds

--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -3,6 +3,10 @@
     <HeaderBar />
     <div class="section columns">
         <NavMenu />
+        <RadzenDialog/>
+        <RadzenNotification/>
+         <RadzenContextMenu/>
+         <RadzenTooltip/>
         <main class="column">
             @Body
         </main>
